--- a/frontend_lifeSports/package.json
+++ b/frontend_lifeSports/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "immer": "^7.0.9",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -26,7 +27,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
