--- a/frontend_lifeSports/package.json
+++ b/frontend_lifeSports/package.json
@@ -16,13 +16,18 @@
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
     "immer": "^7.0.9",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-daum-postcode": "^1.0.9",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^10.9.0",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
