--- a/frontend_lifeSports/package.json
+++ b/frontend_lifeSports/package.json
@@ -21,10 +21,12 @@
     "immer": "^7.0.9",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
+    "react-async": "^10.0.1",
     "react-native": "0.63.2",
     "react-native-calendar-strip": "^2.0.9",
     "react-native-datepicker": "^1.7.2",
     "react-native-daum-postcode": "^1.0.9",
+    "react-native-dropdown-picker": "^3.7.0",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
